# solar-defect-inspector

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  cloudbuild-frontend.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: README.md
deploy/k8s/: configmap.yaml  deployment.yaml  secret.example.yaml  service.yaml
frontend/: Dockerfile  requirements.txt  streamlit_app.py
inspector/: __init__.py  api.py  classifier.py  config.py  db.py  metrics.py  pipeline.py  reporter.py  schemas.py  service.py  storage.py
migrations/: env.py
migrations/versions/: 0001_initial.py
notebooks/: training.ipynb
tests/: conftest.py  test_api.py  test_classifier.py  test_db.py  test_pipeline.py  test_reporter.py  test_service.py
